Added ability to add bird and get bird by id

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -59,6 +59,12 @@ nav {
     
 }
 
+.details-sec {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .detail-header {
     margin-top: 2rem;
     text-align: center;
